syntax = "proto3";
package message;
option  go_package = "/message";

import "error.proto";

message Unknown
{
}

message Ping
{
    int64 ClientTimestamp = 1;
}
message Pong
{
    int64 ClientTimestamp = 1;
    int64 ServerTimestamp = 2;
}

message Error
{
    ERROR  Error = 1;
}

message LoginReq
{
    string PlatformUUID  = 1;    // 平台uuid
    string PlatformName  = 2;    // 平台名字
    string OS            = 3;    // 系统
    string ClientVersion = 4;    // 版本号
}

message LoginRsp
{
    uint64  UID         = 1; // 账号id
    uint64  RID         = 2; // 角色Id
    string  cryptic     = 3; // 密文
}

message EnterGameReq
{
    uint64  UID       = 1; // 账号id
    uint64  RID       = 2; // 角色Id
    string  cryptic   = 3; // 密文
}

message EnterGameRsp
{
    bool NewPlayer = 1; // 是否是新玩家
}

// 角色信息
message RoleInfoPush
{
    uint64  UID     = 1; // 账号Id
    uint64  RID     = 2; // 角色Id
    uint64  SId     = 3; // 服务器Id
    string  Name    = 4;
    string  Icon    = 5;
    string  Country = 6;
}